  - Bump net.milkbowl.vault:VaultUnlockedAPI from 2.9 to 2.15.
  - Bump org.apache.maven.plugins:maven-javadoc-plugin from 3.11.2 to 3.12.0.
  - Fix itemuse list not being used against projectiles which are fired into the air.
  - Allow empty towns to turn into ruins, courtesy of Warrior with PR #8071.
  - New config option: town_ruining.empty_towns_become_ruins
    - Default: false
    - When enabled, when the last resident is removed from a town and it becomes empty (such as when inactive resident deletion is enabled),
      the town will turn into a ruin instead of being immediately removed.
  - Fix IllegalArgumentException when a plugin we integrate with has a bad version, courtesy of Warrior with PR #8072.
  - Fix unneeded msg_invalid_name exception message from /n enemy, courtesy of pernio with PR #8073. (First-Time Contributor!)
  - Add a cooldown to prevent towns spamming residents by outlawing and unoutlawing them, courtesy of Veyronity with PR #8074.
  - New Config Option: resident_settings.warn_player_on_outlaw_message_cooldown_in_seconds
    - Default: 30
    - How many seconds in between warning messages, to prevent spam.
0.102.0.6:
  - Fix titles messages showing their subtitle in the title position.
  - Fix towny_teleport_warmup_seconds permission node not working.
  - Fix copper golem test that caused Could not pass event ItemTransportingEntityValidateTargetEvent spam.
    - Closes #8085.
  - Bump net.coreprotect:coreprotect from 22.4 to 23.1.
  - Bump me.clip:placeholderapi from 2.11.6 to 2.11.7.
  - Bump org.apache.commons:commons-compress from 1.26.2 to 1.28.0.
  - Fix the mayor succession event not being fired, courtesy of Warrior with PR #8086.
  - Skip proximity checks when minimum plot distance is set to 0, courtesy of MakcNmk with PR #8087. (First-Time Contributor!)
0.102.0.7:
  - Add new CHESTS_WITHOUT_ENDERCHEST group, usable in the config switch_ids list, includes all chests but the enderchest.
    - Closes #8095. 